feat: modernizar framework para Java 21 e reforçar segurança
- adota Java 21 e adiciona controles de supply chain
- gera SBOM CycloneDX agregado
- adiciona headers REST seguros e limites CRUD
- implementa perfis avançados de validação JWT
- amplia testes e atualiza documentação e roadmap